--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(''MobileButton)
 export(''MobileIcon)
 export(''MobileAvatar)
+export(''MobileCard)
 export(''MobileAutoCenter)
 export(''MobileDivider)
 export(''MobileGrid)
