--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(''MobileButton)
 export(''MobileIcon)
 export(''MobileAvatar)
 export(''MobileCard)
+export(''MobileCollapse)
 export(''MobileAutoCenter)
 export(''MobileDivider)
 export(''MobileGrid)
