feat: 新增文本省略组件MobileEllipsis

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(''MobileIcon)
 export(''MobileAvatar)
 export(''MobileCard)
 export(''MobileCollapse)
+export(''MobileEllipsis)
 export(''MobileAutoCenter)
 export(''MobileDivider)
 export(''MobileGrid)
