feat: 新增浮动面板组件MobileFloatingPanel

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(''MobileAvatar)
 export(''MobileCard)
 export(''MobileCollapse)
 export(''MobileEllipsis)
+export(''MobileFloatingPanel)
 export(''MobileAutoCenter)
 export(''MobileDivider)
 export(''MobileGrid)
