feat: 新增走马灯组件MobileSwiper

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(''MobileImageViewer)
 export(''MobileList)
 export(''MobilePageIndicator)
 export(''MobileSteps)
+export(''MobileSwiper)
 export(''MobileAutoCenter)
 export(''MobileDivider)
 export(''MobileGrid)
