feat: 新增标签组件MobileTag

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(''MobileList)
 export(''MobilePageIndicator)
 export(''MobileSteps)
 export(''MobileSwiper)
+export(''MobileTag)
 export(''MobileAutoCenter)
 export(''MobileDivider)
 export(''MobileGrid)
