feat: 新增页脚组件MobileFooter

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(''MobileCard)
 export(''MobileCollapse)
 export(''MobileEllipsis)
 export(''MobileFloatingPanel)
+export(''MobileFooter)
 export(''MobileImage)
 export(''MobileImageViewer)
 export(''MobileList)
