--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(''MobileSteps)
 export(''MobileSwiper)
 export(''MobileTag)
 export(''MobileWaterMark)
+export(''MobileCascader)
 export(''MobileAutoCenter)
 export(''MobileDivider)
 export(''MobileGrid)
