--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(''MobileWaterMark)
 export(''MobileCascader)
 export(''MobileCascaderView)
 export(''MobileCheckList)
+export(''MobileSearchBar)
 export(''MobileCenterPopup)
 export(''MobilePopup)
 export(''MobileAutoCenter)
