--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/preset-react": "^7.22.3",
     "@plotly/dash-component-plugins": "^1.2.3",
     "@plotly/webpack-dash-dynamic-import": "^1.2.0",
+    "ahooks": "^3.7.8",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^9.1.2",
     "copyfiles": "^2.1.1",
