feat: 新增异常组件MobileErrorBlock

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(''MobileCascaderView)
 export(''MobileCheckList)
 export(''MobileSearchBar)
 export(''MobileCenterPopup)
+export(''MobileErrorBlock)
 export(''MobilePopup)
 export(''MobileAutoCenter)
 export(''MobileDivider)
