feat: 新增复选框组件MobileCheckbox

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(''MobileTag)
 export(''MobileWaterMark)
 export(''MobileCascader)
 export(''MobileCascaderView)
+export(''MobileCheckbox)
 export(''MobileCheckList)
 export(''MobileSearchBar)
 export(''MobileCenterPopup)
