--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-react": "^7.14.2",
+    "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "react": "^16.8.6",
     "react-docgen": "^5.4.3",
