--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(''MobileErrorBlock)
 export(''MobilePopup)
 export(''MobileResult)
 export(''MobileToast)
+export(''MobileSkeleton)
 export(''MobileAutoCenter)
 export(''MobileDivider)
 export(''MobileGrid)
