--- a/.npmignore
+++ b/.npmignore
@@ -1,25 +1,14 @@
-# dependencies
+/.vscode
+/build
+/deps
+/dist
+/feffery_antd_mobile_components.egg-info
+/inst
+/man
 /node_modules
+/R
+/tests
 
-# testing
-/coverage
-
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Development folders and files
-public
-src
-scripts
-config
-.travis.yml
-CHANGELOG.md
-README.md
+_validate_init.py
+.*
+*.py
