--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "build:activated": "npm run build:js && npm run build:backends-activated"
   },
   "author": "CNFeffery <fefferypzy@gmail.com>",
+  "email": "fefferypzy@gmail.com",
   "license": "MIT",
   "dependencies": {
     "antd-mobile": "^5.31.1",
@@ -36,9 +37,9 @@
     "@plotly/webpack-dash-dynamic-import": "^1.2.0",
     "ahooks": "^3.7.8",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^9.1.2",
+    "babel-loader": "^8.0.6",
     "copyfiles": "^2.1.1",
-    "css-loader": "^6.8.1",
+    "css-loader": "^3.0.0",
     "eslint": "^6.0.1",
     "eslint-config-prettier": "^6.0.0",
     "eslint-plugin-import": "^2.18.0",
@@ -48,11 +49,11 @@
     "react": "^16.8.6",
     "react-docgen": "^5.4.3",
     "react-dom": "^16.8.6",
-    "style-loader": "^3.3.3",
+    "style-loader": "^0.23.1",
     "styled-jsx": "^3.2.1",
-    "webpack": "^5.84.1",
-    "webpack-cli": "^5.1.1",
-    "webpack-dev-server": "^4.15.0"
+    "webpack": "4.36.1",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "3.1.0"
   },
   "engines": {
     "node": ">=8.11.0",
