feat: 新增对话框组件MobileDialog

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(''MobilePickerView)
 export(''MobileSearchBar)
 export(''MobileActionSheet)
 export(''MobileCenterPopup)
+export(''MobileDialog)
 export(''MobileErrorBlock)
 export(''MobilePopover)
 export(''MobilePopup)
