feat: 新增安全区组件MobileSafeArea

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ export(''MobileAutoCenter)
 export(''MobileDivider)
 export(''MobileGrid)
 export(''MobileGridItem)
+export(''MobileSafeArea)
 export(''MobileSpace)
 export(''MobileCapsuleTabs)
 export(''MobileJumboTabs)
