feat: 新增结果页面卡片组件MobileResultPageCard

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,3 +56,4 @@ export(''Fragment)
 export(''MobileFloatingBubble)
 export(''MobileMockPhone)
 export(''MobileResultPage)
+export(''MobileResultPageCard)
