feat: 新增无限滚动组件MobileInfiniteScroll #2

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(''MobileFloatingPanel)
 export(''MobileFooter)
 export(''MobileImage)
 export(''MobileImageViewer)
+export(''MobileInfiniteScroll)
 export(''MobileList)
 export(''MobilePageIndicator)
 export(''MobileSteps)
